--- a/RaellShoes/Views/Administrador/Produtos.cshtml
+++ b/RaellShoes/Views/Administrador/Produtos.cshtml
@@ -437,8 +437,8 @@
 
                                         <div class="col-lg-12 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>Descrição</span>
-                                            <textarea asp-for="Produto.Descricao" type="text" name="descricao" class="form-control" id="descricao"
-                                                      placeholder="Descrição do Produto" data-rule="minlen:3" rows="10" required></textarea>
+                                            <textarea asp-for="Produto.Descricao" type="text"  class="form-control" id="descricao"
+                                                      placeholder="Descrição do Produto"  rows="10" required></textarea>
                                             <div class="invalid-feedback">
                                                 *Campo obrigatório
                                             </div>
@@ -513,7 +513,7 @@
 
                                         <div class="col-lg-12 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                             <span>Cuidados com o Produto</span>
-                                            <textarea asp-for="Produto.FichaTecnica.Cuidados" type="text" name="cuidados-produto" class="form-control" id="cuidados-produto"
+                                            <textarea asp-for="Produto.FichaTecnica.Cuidados" type="text"  class="form-control" id="cuidados-produto"
                                                       placeholder="Principais cuidados com o Produto" data-rule="minlen:3" rows="5"
                                                       required></textarea>
                                             <div class="invalid-feedback">
