--- a/RaellShoes/Views/Administrador/Categorias.cshtml
+++ b/RaellShoes/Views/Administrador/Categorias.cshtml
@@ -1,4 +1,4 @@
-﻿@model RaellShoes.Models.Administrador.Categoria
+﻿@model RaellShoes.Models.ViewModel.CategoriaViewModel
 
 <!DOCTYPE html>
 <html lang="en">
@@ -86,61 +86,69 @@
             <br>
 
 
-            <!--Box Fornecedor-->
-            <div class="info-wrap" style=" border-radius:20px">
-                <form class="needs-validation" novalidate action="">
-
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
-                            <span>Nome</span>
-                            <input asp-for="Nome" class="form-control" id="nome" placeholder="Nome do Fornecedor" required
-                                   value="Casual">
-                            <div class="invalid-feedback">
-                                *Campo obrigatório
-                            </div>
-                        </div>
-
-                        <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
-                            <span>Status</span>
-                            <br>
-                            <select asp-for="Status" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.Status>()"
-                                    class="form-select" required>
-                                <option></option>
-                                <option value="1" selected>Ativo</option>
-                                <option value="2">Inativo</option>
-                            </select>
-                            <div class="invalid-feedback">
-                                *Campo obrigatório
-                            </div>
-                        </div>
-
-
-                        <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
-                            <span>Data de Cadastro</span>
-                            <input asp-for="DataCadastro" class="form-control" id="data-cadastro" type="date" required
-                                   value="2022-01-11">
-                            <div class="invalid-feedback">
-                                *Campo obrigatório
-                            </div>
-                        </div>
-
-                        <br> <br><br> <br>
+            @foreach (var item in Model.Categorias)
+            {
+                <!--Box Categorias-->
+                <div class="info-wrap" style=" border-radius:20px">
+                    <form class="needs-validation" novalidate asp-action="AlterarCategoria">
+                       
                         <div class="row">
-                            <div class="col-lg-6">
-                                <button class="btn btn-warning btn-sm col-lg-12" style="border-radius: 10px;">Alterar</button>
+                            <div class="col-lg-6 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
+                                <span>Nome</span>
+                                <input asp-for="@item.Nome" class="form-control" id="nome" placeholder="Nome do Fornecedor" required name="Nome" >
+
+                                <div class="invalid-feedback">
+                                    *Campo obrigatório
+                                </div>
+                            </div>
+
+                            <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
+                                <span>Status</span>
+                                <br>
+                                <select asp-for="@item.Status" asp-items="Html.GetEnumSelectList<RaellShoes.Models.Enums.Status>()" name="Status"
+                                        class="form-select" required>
+                                </select>
+                                <div class="invalid-feedback">
+                                    *Campo obrigatório
+                                </div>
                             </div>
 
 
-                            <div class="col-lg-6">
-                                <form>
-                                    <a action="" asp-route-id="@Model.Id" type="submit" class="btn btn-danger btn-sm  col-lg-12"
-                                       style="border-radius: 10px;">Excluir</a>
-                                </form>
+                            <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
+                                <span>Data de Cadastro</span>
+                                <input asp-for="@item.DataCadastro" class="form-control" id="data-cadastro" type="date" name="DataCadastro" required>
+
+                                <div class="invalid-feedback">
+                                    *Campo obrigatório
+                                </div>
+                            </div>
+
+                            <br> <br><br> <br>
+                            <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
+                                <input type="hidden" asp-for="@item.Id" name="Id" />                               
+                             
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <button class="btn btn-warning btn-sm col-lg-12" style="border-radius: 10px;">Alterar</button>
+                                </div>
+
+
+                                <div class="col-lg-6">
+                                    <form>
+                                        <input type="hidden" asp-for="@item.Id" name="Id" />
+                                        <button asp-action="ExcluirCategoria" type="submit" class="btn btn-danger btn-sm  col-lg-12"
+                                                style="border-radius: 10px;">
+                                            Excluir
+                                        </button>
+                                    </form>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                </form>
-            </div><br>
+                    </form>
+                </div><br>
+            }
+
 
 
 
@@ -167,7 +175,7 @@
                                             <div class="row">
                                                 <div class="col-lg-6 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                                     <span>Nome</span>
-                                                    <input asp-for="Nome" class="form-control" id="nome" placeholder="Nome da Categoria" required>
+                                                    <input asp-for="Categoria.Nome" class="form-control" id="nome" placeholder="Nome da Categoria" required>
 
                                                     <div class="invalid-feedback">
                                                         *Campo obrigatório
@@ -182,7 +190,7 @@
                                     </div>
 
 
-                                    
+
 
 
                                     <br>
@@ -197,7 +205,7 @@
             </div>
 
 
-    </section>
+</section>
 
 
 
