--- a/RaellShoes/Views/Administrador/Categorias.cshtml
+++ b/RaellShoes/Views/Administrador/Categorias.cshtml
@@ -116,7 +116,7 @@
 
                             <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                 <span>Data de Cadastro</span>
-                                <input asp-for="@item.DataCadastro" class="form-control" id="data-cadastro" type="date" name="DataCadastro" required disabled>
+                                <input asp-for="@item.DataCadastro" class="form-control" id="data-cadastro" type="date" name="DataCadastro" required readonly>
 
                                 <div class="invalid-feedback">
                                     *Campo obrigatório
