--- a/RaellShoes/Views/Administrador/Fornecedores.cshtml
+++ b/RaellShoes/Views/Administrador/Fornecedores.cshtml
@@ -123,7 +123,7 @@
 
                             <div class="col-lg-2 col-md-6 form-group mt-3 mt-md-0" id="comb-form">
                                 <span>Data de Cadastro</span>
-                                <input asp-for="@item.DataCadastro" name="DataCadastro" class="form-control" id="data-cadastro" type="date" required disabled>
+                                <input asp-for="@item.DataCadastro" name="DataCadastro" class="form-control" id="data-cadastro" type="date" required readonly>
 
                                 <div class="invalid-feedback">
                                     *Campo obrigatório
